# asdl-archive

./: README.md
asdlGen/: CHANGES.html  CHANGES.sgml  INSTALL.html  INSTALL.sgml  Makefile.in  README.html  README.sgml  aclocal.m4  configure  configure.in
asdlGen/src/: Makefile.am  Makefile.in
asdlGen/src/asdl/: Makefile.am  Makefile.in  asdl.asdl  generic.asdl  std-types.asdl
asdlGen/src/asdl/tests/: asdl.asdl  slp.asdl  slp3.asdl  views.asdl
asdlGen/src/asdl/tests/modTest/: all.asdl
asdlGen/src/asdl/zsuif/: Makefile  README  arith.c  hello-zsuif.sml  hello.c  sources.cm  trans_instruction.h  trans_statement.h  trans_suif.cc  trans_suif.h  trans_type.h  zsuif.asdl
asdlGen/src/c/: Makefile  Makefile.am  Makefile.in  StdPkl.h  StdTypes.c  StdTypes.h  asdl_base.c  asdl_base.h  asdl_types.h  assoc.c  cii_base.c  cii_base.h  cii_big_base.h  gpickle.c  match.h  pkl-int.c  pkl-int.h  pkl-int.h.in  prim_env.h  prims.c  prims.h  share.c  share.h  std_prim_env.c  std_prims.c  std_prims.h  xlate.c  xml_prim_env.c  xml_prims.c  xml_prims.h
asdlGen/src/cii/: install.html
asdlGen/src/cii/examples/: kref.c  mpcalc.c  sieve.c  sort.c
asdlGen/src/cii/src/: ap.c  text.c  thread-nt.c
asdlGen/src/cxx/: Makefile  Makefile.am  Makefile.in  StdPrims.hxx  StdTypes.cxx  StdTypes.hxx  asdl_base.cxx  asdl_base.hxx  std_prims.cxx
asdlGen/src/doc/: views.html
asdlGen/src/doc/internals/: big-picture.dot  big-picture.eps  glue.tex  intro.tex  lang-spec.dot  lang-spec.eps  main.latex
asdlGen/src/doc/ldoc/: code-interface.ldoc  common-decls.ldoc  copyright.ldoc  invocation.ldoc  pickles.ldoc  support-code.ldoc  syntax.ldoc  views.ldoc
asdlGen/src/haskell/: AsdlHaskell.hs  BitSet.hs  HaskellBase.hs  StdPkl.hs  StdPrims.hs  StdPrimsUtil.hs  StdTypes.hs
asdlGen/src/java/: Makefile  Makefile.am  Makefile.in
asdlGen/src/java/asdl_base/: Prims.java
asdlGen/src/java/asts/StdPkl/: PklJava.java  g.java
asdlGen/src/java/asts/StdPrims/: g.java
asdlGen/src/java/asts/StdTypes/: Visitor.java  bool.java  bool_list.java  g.java  ieee_real.java  ieee_real_list.java  int16.java  int16_list.java  int32.java  int32_list.java  int64.java  int64_list.java  int8.java  int8_list.java  nat.java  nat_list.java  uint16.java  uint16_list.java  uint32.java  uint32_list.java  uint64.java  uint64_list.java  uint8.java  uint8_list.java
asdlGen/src/misc/: Makefile.in  asdlGen  asdlGen.bat  ensuredir  find_runtime.sh  id_hack.pl  makedist  ml-build.in  sml-batch  sml-batch.in  sysname
asdlGen/src/ocaml/: sexpLex.ml  sexpLex.mli  sexpPkl.ml  stdPkl.ml  stdPkl.mli  stdPrimsUtil.ml  stdPrimsUtil.mli
asdlGen/src/sml/: Makefile.am  Makefile.in  build-all.sml  build.bat  build.sh  build.sml  config.sml.in  sources.cm
asdlGen/src/sml/asts/: AsdlValue.sig  TypePickle.sig  algebraic.sig  algebraic.sml  algol.sig  algol.sml  ansi-c.sig  ansi-c.sml  format.sig  format.sml  lang-ast.sig  lang-ast.sml  misc.sml  oo.sig  oo.sml  sources.cm  types.sig  types.sml  untyped.sig  untyped.sml  xml-dtd.sig  xml-dtd.sml  yacc-grammar.sml
asdlGen/src/sml/base/: asdl-base.cm  asdl-types.sig  base.sml  error.sig  error.sml  identifier.sig  identifier.sml  pkl-int.sml  pkl-real.sml  pkl.sig  pkl.sml  prims.sig  sexp-pkl.sig  sexp-pkl.sml  share.sml  std-pkl.sig  std-pkl.sml  std-prims-util.sig  std-prims-util.sml  std-prims.sig  std-prims.sml  std-types.sml
asdlGen/src/sml/convert/: from-sml.sml  pp-asdl.sml  sources.cm
asdlGen/src/sml/frontend/: Asdl.sig  Asdl.sml  AsdlUtil.sig  AsdlUtil.sml  aka.sml  asdl-semant.sml  asdl-sig.sml  asdl.grm  asdl.lex  default-decls.sml  export.sml  link.sml  main.sml  module-props.sml  module.sig  module.sml  parser.sml  semant-props.sig  semant-props.sml  semant.sig  semant.sml  sources.cm
asdlGen/src/sml/frontend/Attic/: asdl.sml
asdlGen/src/sml/main/: depends.sml  export.sml  lib-files.sml  link.sml  main.sml
asdlGen/src/sml/pp-pickle/: aka.sml  ascii-pp.sml  asdl.asdl.sig  asdl.asdl.sml  asdl_v.asdl.sig  asdl_v.asdl.sml  gpickle.sml  html-list-pp.sml  html-table-pp.sml  pp-pickle.sml  sources.cm  text-pp.sml  xml-pp.sml
asdlGen/src/sml/test/: harness.sml
asdlGen/src/sml/translate/: algebraic-module-translator.sml  algebraic-pkl-gen.sml  algebraic-semant-translator.sml  algebraic-spec.sig  algebraic-spec.sml  algol-module-translator.sml  algol-pkl-gen.sml  algol-semant-translator.sml  algol-spec.sig  algol-spec.sml  ansi-c-pp.sml  attrib-getter.sig  attrib-getter.sml  c-plus-plus-pp.sml  dynamic-semant-translator.sml  dynamic-spec.sig  dynamic-spec.sml  file-translate.sml  haskell-pp.sml  html-pp.sml  icon-pp.sml  idfix.sml  java-pp.sml  ml-pp.sml  module-translate.sml  oo-build-aux.sml  oo-module-translator.sml  oo-pkl-gen.sml  oo-semant-translator.sml  oo-spec.sig  oo-spec.sml  pkl-gen.sig  pkl-gen.sml  semant-translate.sml  semant-translator.sig  source-translate.sml  sources.cm  std-pickler.sig  std-pickler.sml  stmt-exp.sig  (+16 more)
asdlGen/src/sml/translate/algebraic/: algebraic-semant-translator.sml  algebraic-spec.sig  algebraic-spec.sml  haskell-pp.sml  ocaml-pp.sml  sml-pp.sml
asdlGen/src/sml/translate/algol/: algol-semant-translator.sml  algol-spec.sig  algol-spec.sml  ansi-c-pp.sml  translate-ansi-c.sml
asdlGen/src/sml/translate/dynamic/: dynamic-semant-translator.sml  dynamic-spec.sig  dynamic-spec.sml  icon-pp.sml
asdlGen/src/sml/translate/misc/: html-pp.sml  translate-format.sml  xml-dtd-pp.sml  yacc-grammar-pp.sml
asdlGen/src/sml/translate/oo/: c-plus-plus-pp.sml  java-pp.sml  oo-build-aux.sml  oo-semant-translator.sml  oo-spec.sig  oo-spec.sml
asdlGen/src/sml/translate/picklers/: pickler.sig  std-pickler.sig  std-pickler.sml  xml-pickler.sml
asdlGen/src/sml/translate/support/: file-translate.sml  idfix.sml  idmaps.sml  pp-ast.sml  semant-translate.sml  semant-translator.sig  source-translate.sml  type-decl.sml
asdlGen/src/sml/type-pickle/: AsdlValue.sml  TypePickle.sml  gen-type-pickle.sml  gpickle.sml  sources.cm  type-pickle.asdl.sig  type-pickle.asdl.sml
asdlGen/src/sml/util/: sources.cm
asdlGen/src/sml/util/dtangle/: build-dtangle.sml  (+4 more)
(+450 files in other folders)
