dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/c/std_prims.c)
AC_CONFIG_AUX_DIR(src/misc)
dnl
dnl define various directory paths
dnl
ASDLGEN_ROOT=`pwd`
ASDLGEN_BINDIR=$ASDLGEN_ROOT/bin
ASDLGEN_MISCDIR=$ASDLGEN_ROOT/src/misc
dnl Checks for SML/NJ
AC_PROG_INSTALL
AC_PROG_SMLNJ

dnl
dnl setup things so that we use the correct version of build-ml
dnl
if test x$SMLNJ_USING_NEW_CM = xFALSE ; then
  ML_BUILD="$ASDLGEN_BINDIR/ml-build"
  ML_BUILD_REWRITE="bin/ml-build:src/misc/ml-build.in"
  ML_BUILD_CHMOD="chmod 755 $ML_BUILD" 
else
  AC_CHECK_PROGS(ML_BUILD,ml-build)
fi
AC_SUBST(ML_BUILD)
ASDLGEN_VERSION=2.0-beta
ASDLGEN_HEAP='${top_srcdir}/src/sml/asdlGen.${HEAP_SUFFIX}'
AC_SUBST(ASDLGEN_VERSION)
AC_SUBST(ASDLGEN_HEAP)
AC_SUBST(HEAP_SUFFIX)

dnl Write out the files
AC_OUTPUT(Makefile
	  $ML_BUILD_REWRITE
	  src/sml/config.sml
          src/misc/sml-batch,
dnl Set the bits on the shell scripts
[ chmod 755 src/misc/sml-batch 
  $ML_BUILD_CHMOD
],
[ ML_BUILD_CHMOD="$ML_BUILD_CHMOD"]
)

